fixed additional tests
